--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "@types/jquery": "^3.3.31",
+    "cross-fetch": "^3.0.4",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "reverse-geocode": "^1.3.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
